<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_eatery_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/eatery_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <ImageView
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_circle_clickable"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toTopOf="@+id/gl_top"
            android:contentDescription="@string/icon_button_back" />

        <ImageView
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_white_circle_clickable"
            android:padding="8dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toStartOf="@id/bt_favorite"
            app:layout_constraintTop_toTopOf="@+id/gl_top"
            android:contentDescription="@string/icon_search" />

        <ImageView
            android:id="@+id/bt_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_circle_clickable"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_black_hollow"
            app:layout_constraintEnd_toEndOf="@+id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/gl_top"
            android:contentDescription="@string/icon_favorite" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_eatery_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/roboto_500"
            android:text="@string/default_eatery_rating"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_star"
            app:layout_constraintBottom_toTopOf="@+id/tv_eatery_name"
            app:layout_constraintStart_toStartOf="@+id/gl_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_eatery_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/roboto_500"
            android:text="@string/default_eatery_schedule"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="@+id/tv_eatery_rating"
            app:layout_constraintStart_toEndOf="@id/tv_eatery_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_eatery_rating" />

        <TextView
            android:id="@+id/tv_eatery_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto_600"
            android:text="@string/default_eatery_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_eatery_address"
            app:layout_constraintStart_toStartOf="@+id/gl_left" />

        <TextView
            android:id="@+id/tv_eatery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_400"
            android:text="@string/default_eatery_address"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_eatery_image"
            app:layout_constraintStart_toStartOf="@+id/gl_left" />

        <TextView
            android:id="@+id/tv_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_600"
            android:text="@string/meals"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/iv_eatery_image" />

        <HorizontalScrollView
            android:id="@+id/eatery_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/tv_meals">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_burgers"
                    style="@style/MealType"
                    android:background="@drawable/bg_meal_type_selected"
                    android:text="@string/burgers"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_fast_food"
                    style="@style/MealType"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_meal_type_not_selected"
                    android:text="@string/french_fries"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_bakery"
                    style="@style/MealType"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_meal_type_not_selected"
                    android:text="@string/pizza"
                    android:textColor="@color/black" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/iv_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_grid"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular"
            app:layout_constraintStart_toStartOf="@id/gl_left"
            app:layout_constraintTop_toTopOf="@+id/tv_popular"
            android:contentDescription="@string/icon_grid" />

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_600"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eatery_types" />

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular"
            app:layout_constraintEnd_toEndOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/tv_popular"
            android:contentDescription="@string/icon_settings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular"
            tools:listitem="@layout/rv_item_meal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_right"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@id/rv_meals">

            <TextView
                android:id="@+id/tv_meals_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_light_black_rounded_rect"
                android:fontFamily="@font/roboto_600"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/default_meals_count"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/bt_go_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@drawable/bg_go_to_cart"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_600"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/go_to_cart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_total_meals_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_light_black_rounded_rect"
                android:fontFamily="@font/roboto_600"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="@string/default_total_meals_price"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>