<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="163dp"
    android:layout_marginEnd="16dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_custom">

        <ImageView
            android:id="@+id/iv_meal_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image_food_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/meal_image" />

        <TextView
            android:id="@+id/tv_meal_discount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_orange_rounded_rect"
            android:fontFamily="@font/roboto_600"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/default_meal_discount"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_favorite"
            app:layout_constraintStart_toStartOf="@id/iv_meal_image"
            app:layout_constraintTop_toTopOf="@+id/bt_favorite" />

        <ImageView
            android:id="@+id/bt_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_orange_circle_clickable"
            android:padding="6dp"
            android:src="@drawable/ic_favorite_white_hollow"
            app:layout_constraintEnd_toEndOf="@id/iv_meal_image"
            app:layout_constraintTop_toTopOf="@id/iv_meal_image"
            android:contentDescription="@string/icon_favorite" />

        <TextView
            android:id="@+id/tv_meal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_600"
            android:text="@string/default_meal_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_meal_image" />

        <TextView
            android:id="@+id/tv_meal_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_400"
            android:text="@string/default_meal_weight"
            android:textColor="@color/half_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_meal_price"
            app:layout_constraintStart_toEndOf="@id/tv_meal_price"
            app:layout_constraintTop_toTopOf="@+id/tv_meal_price" />

        <TextView
            android:id="@+id/tv_meal_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_400"
            android:maxLines="2"
            android:text="@string/default_meal_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_meal_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_meal_price" />

        <TextView
            android:id="@+id/bt_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_orange_rounded_rect"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_600"
            android:gravity="center"
            android:paddingVertical="9dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meal_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
